# alex_gorbunov_cv

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  compose-dev.yaml  compose-dev.yml  compose-prod.yaml  go.mod  go.sum
backend/: .gitignore  alembic.ini  go.mod  go.sum  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9d3da9ee5494_init_project.py
backend/backend/: definitions.py  main.py
backend/backend/controllers/: articles.py
backend/backend/controllers/models/: articles.py
backend/backend/core/: config.py  database.py
backend/backend/core/config/: config_example.ini
backend/backend/model/: articles.py
backend/backend/model/models/: articles.py
backend/backend/views/: articles.py
backend/cmd/api/: main.go
backend/config/: database_example.ini
backend/internal/lib/logger/sl/: sl.go
backend/internal/server/middleware/logger/: logger.go
backend/internal/server/router/: router.go
backend/internal/storage/mongo/: mongo.go
cmd/: main.go
config/: dev.yaml  example.yaml
frontend/: env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/assets/: _variables.scss  main.scss  quasar-variables.sass
frontend/src/composables/: useGsapAnim.ts
frontend/src/helpers/: api_error.ts
internal/config/: config.go
internal/models/: experience.go  project.go
internal/storage/: cv.json  experience.go  local.go  mongodb.go  projects.go  sample_data.json
templates/: main.templ  main_templ.go
web/templates/: main.templ  main_templ.go
(+35 files in other folders)
